--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,15 @@
-nginx-proxy:
-  image: jwilder/nginx-proxy
-  container_name: docker-nginx
-  ports:
-    - "80:80"
-  volumes:
-    - /var/run/docker.sock:/tmp/docker.sock:ro
+version: "3"
+services:
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    container_name: proxy
+    networks:
+      - outside
+    ports:
+      - "80:80"
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+networks:
+  outside:
+    external:
+      name: outside
