--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   jenkins:
-    image: jenkins:alpine
+    image: jenkins
     container_name: jenkins
     restart: always
     networks:
